# todo-app

./: README.md  app.py  pyproject.toml  task.py  test.db  test_app.py
app/: app.py
src/: task.py
tests/: test_app.py  test_tasks.py
