[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "An app to organize your list of to-dos."
authors = ["Murilo Sousa <murlsousa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask-RESTful = "^0.3.9"
Flask = "^2.0.3"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
